Create a presentable version with minimum styling
Adapt the page from Sally Student test page.

--- a/index.html
+++ b/index.html
@@ -1,29 +1,107 @@
+<!-- NJIT default user homepage version 20070214 -->
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Punit Harish Lohani</title>
-	<link rel="stylesheet" type="text/css" href="styles/main.css">
+    <title>Punit Harish Lohani - NJIT(Home Page)</title>
+    <meta charset="utf-8" name="description" content="Punit Harish Lohani is a student at New Jersey Institute of Technology. This page describes his technical and professional abilities and gives a peek into his profile.">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
+
 <body>
-	<div>
-		<h1>Punit Harish Lohani</h1>
-		<p>I am a graduate student at NJIT pursuing a Masters degree in Computer Science. I am an aspiring full stack developer. I love animals, coding, sports and boating. It rhymes!!</p>
-		<h2>Skills</h2>
-		<ul>
-			<li>JavaScript</li>
-			<li>React Native</li>
-			<li>ReactJS</li>
-			<li>jQuery</li>
-			<li>HTML</li>
-			<li>CSS</li>
-			<li>BackboneJS</li>
-			<li>ES6</li>
-		</ul>
-		<h2>Contact</h2>
-		<p>LinkedIn: <a href="https://www.linkedin.com/in/punit-lohani-0a382789">Punit Lohani</a></p>
-		<p>Facebook: <a href="https://www.facebook.com/punit.lohani.75">Punit Lohani</a></p>
-	</div>
-
-
+    <div>
+        <header>
+            <h1>Punit Harish Lohani</h1>
+            <img height="320" width="640" alt="A picture of Lelouch, the protagonist in the anime Code Geass" src="https://ghostlightning.files.wordpress.com/2009/10/code-geass-r1-op-01-lelouch-zero-mask-removed.jpg">
+            <address>
+                Email - <a href="mailto:pl243@njit.edu" target="_blank">pl243@njit.edu</a> and <a href="mailto:punit_lohani@yahoo.com" target="_blank">punit_lohani@yahoo.com</a>
+                <br> Phone - (+1)9734898480
+                <br> 213 Schuyler Avenue Unit 2,
+                <br> Kearny, NJ - 07032
+            </address>
+        </header>
+        <main>
+            <section>
+                <h2>About Me</h2>
+                <p>
+                    I am an international graduate student at New Jersey Institute of Technology pursuing a Masters degree in Computer Science. I am an aspiring full stack developer. I love animals, coding, sports, anime and boating. Just a simple Indian student aiming to carve out a successful career in the field of software and web development. I am still working on the contents of this site. This should be functional and better equipped as an interface in 3-4 weeks. Hang in there.... I will turn this into a beauty. Until then, you will have to do with a picture of my favorite Anime character. Not available on Twitter or Instagram until I get a job offer from them.
+                </p>
+            </section>
+            <section>
+                <h2>Skills</h2>
+                <ul>
+                    <li>JavaScript</li>
+                    <li>React Native</li>
+                    <li>ReactJS</li>
+                    <li>jQuery</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>BackboneJS</li>
+                    <li>ES6</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Colleges Attended</h2>
+                <ul>
+                    <li>
+                        <h4><a href="https://www.njit.edu/" target="_blank">New Jersey Institute of Technology</a></h4>
+                        <p>
+                            Master of Science in Computer Science GPA = 3.167
+                            <br> Expected Graduation - May 2018</p>
+                    </li>
+                    <li>
+                        <h4><a href="http://mu.ac.in/portal/" target="_blank">University of Mumbai</a></h4>
+                        <p>
+                            Bachelor of Science in Computer Engineering GPA = 3.0
+                            <br> Graduated - June 2014 </p>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>Employment History</h2>
+                <ul>
+                    <li>
+                        <h4><a href="http://www.osiansoftware.com/osian-wordpress/" target="_blank">Osian Infotech Pvt Ltd</a> (Mumbai, India) - Software Engineer - July 2015 to August 2016</h4>
+                        <p>
+                            Mobile application and front end development
+                            <ul>
+                                <li>Worked on developing a mobile application to connect music teachers, prospective students and to manage music sessions among them.</li>
+                                <li>Used React Native, ES6 features and concepts of ReactJS to build a cross platform (iOS and Android) mobile application.</li>
+                                <li>Used Redux to handle, maintain and access the state of the application across different screens in the application.</li>
+                                <li>Developed reusable React components.</li>
+                                <li>Directly mediated and interfaced with clients to incorporate new changes every day.</li>
+                                <li>Followed Test Driven Development principles.</li>
+                                <li>Integrated REST APIs (developed by backend developer) into the application in order to retrieve backend data and presented it in the application accordingly.</li>
+                                <li>Implemented the entire workflow and navigation schemes as clarified by client and provided in the UI specifications.</li>
+                            </ul>
+                        </p>
+                    </li>
+                    <li>
+                        <h4><a href="https://www.zeuslearning.com/" target="_blank">Zeus Learning Pvt Ltd</a> (Mumbai, India) - Web developer - June 201$ to June 2015</h4>
+                        <p>
+                            Web application and front end development
+                            <ul>
+                                <li>Worked in teams to develop applications under Math Interactive project using existing boilerplate classes and APIs developed previously by senior programmers in the organization.</li>
+                                <li>Implemented the logic of the application and the related models and views using JavaScript and BackboneJS architecture.</li>
+                                <li>Fixed issues and bugs discovered during testing phase and run time.</li>
+                                <li>Applied CSS rules accordingly in order to incorporate the UI specifications as well as to fix UI and cross browser compatibility issues.</li>
+                                <li>Worked in teams to develop and maintain different modules. Handled JIRA tickets (Issues and Feature tickets) assigned to self, fixed the issues and merged them.</li>
+                                <li>Was part of code review team to check if the existing code followed the mentioned coding standards and improve code quality of old code files. Incorporated the required coding standards into the existing files and performed sanity testing on it and handled bugs and issues, if any. This activity honed my ability to wade through other people’s code, get a gist of what is happening and identify cause of issues.</li>
+                                <li>Used JAWS for providing accessibility.</li>
+                            </ul>
+                        </p>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <h2>Social Media</h2>
+            <ul>
+                <li><a target="_blank" href="https://www.linkedin.com/in/punit-lohani-0a382789">LinkedIn</a></li>
+                <li><a target="_blank" href="https://www.facebook.com/punit.lohani.75">Facebook</a></li>
+            </ul>
+        </footer>
+    </div>
 </body>
+
 </html>
