Change position of contact information

--- a/index.html
+++ b/index.html
@@ -95,10 +95,18 @@
             </section>
         </main>
         <footer>
-            <h2>Social Media</h2>
+            <h2>Contact</h2>
             <ul>
+                <li>Email - <a href="mailto:pl243@njit.edu" target="_blank">pl243@njit.edu</a> and <a href="mailto:punit_lohani@yahoo.com" target="_blank">punit_lohani@yahoo.com</a></li>
+                <li>Phone - (+1)9734898480</li>
                 <li><a target="_blank" href="https://www.linkedin.com/in/punit-lohani-0a382789">LinkedIn</a></li>
                 <li><a target="_blank" href="https://www.facebook.com/punit.lohani.75">Facebook</a></li>
+                <li>Address -
+                    <address>
+                        213 Schuyler Avenue Unit 2,
+                        <br> Kearny, NJ - 07032
+                    </address>
+                </li>
             </ul>
         </footer>
     </div>
