Add a link to GitHub profile

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <li>Phone - (+1)9734898480</li>
                 <li><a target="_blank" href="https://www.linkedin.com/in/punit-lohani-0a382789">LinkedIn</a></li>
                 <li><a target="_blank" href="https://www.facebook.com/punit.lohani.75">Facebook</a></li>
+                <li><a target="_blank" href="https://github.com/punitlohani93">GitHub</a></li>
                 <li>Address -
                     <address>
                         213 Schuyler Avenue Unit 2,
