--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </p>
                     </li>
                     <li>
-                        <h4><a href="https://www.zeuslearning.com/" target="_blank">Zeus Learning Pvt Ltd</a> (Mumbai, India) - Web developer - June 201$ to June 2015</h4>
+                        <h4><a href="https://www.zeuslearning.com/" target="_blank">Zeus Learning Pvt Ltd</a> (Mumbai, India) - Web developer - June 2014 to June 2015</h4>
                         <p>
                             Web application and front end development
                             <ul>
