--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>Punit Harish Lohani - NJIT(Home Page)</title>
+    <link rel="shortcut icon" href="assets/favicon.jpg"/>
     <meta charset="utf-8" name="description" content="Punit Harish Lohani is a student at New Jersey Institute of Technology. This page describes his technical and professional abilities and gives a peek into his profile.">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -13,17 +14,21 @@
 </head>
 
 <body>
-    <div>
+    <div class="container">
         <header>
+            <div class="page-header">
             <h1>Punit Harish Lohani</h1>
-            <img height="320" width="640" alt="A picture of Lelouch, the protagonist in the anime Code Geass" src="https://ghostlightning.files.wordpress.com/2009/10/code-geass-r1-op-01-lelouch-zero-mask-removed.jpg">
+            </div>
         </header>
         <main>
-            <section>
+            <section class="row">
+                <img class="col-md-6 col-sm-6 col-xs-12" height="360" alt="A picture of Lelouch, the protagonist in the anime Code Geass" src="assets/lelouch.jpg">
+                <div class="col-md-6 col-sm-6 col-xs-12 jumbotron">
                 <h2>About Me</h2>
                 <p>
-                    I am an international graduate student at New Jersey Institute of Technology pursuing a Masters degree in Computer Science. I am an aspiring full stack developer. I love animals, coding, sports, anime and boating. Just a simple Indian student aiming to carve out a successful career in the field of software and web development. I am still working on the contents of this site. This should be functional and better equipped as an interface in 3-4 weeks. Hang in there.... I will turn this into a beauty. Until then, you will have to do with a picture of my favorite Anime character. Not available on Twitter or Instagram until I get a job offer from them.
+                    I am an international graduate student at New Jersey Institute of Technology pursuing a Masters degree in Computer Science. I am an aspiring full stack developer. I love animals, coding, sports, anime and boating. Just a simple Indian student aiming to carve out a successful career in the field of software and web development. Anime and JavaScript junkie with no Instagram and Twitter.
                 </p>
+                </div>
             </section>
             <section>
                 <h2>Skills</h2>
