Add bootstrap nav bar. Add resume and pictures in assets folder

--- a/index.html
+++ b/index.html
@@ -4,33 +4,71 @@
 
 <head>
     <title>Punit Harish Lohani - NJIT(Home Page)</title>
-    <link rel="shortcut icon" href="assets/favicon.jpg"/>
+    <link rel="shortcut icon" href="assets/favicon.jpg" />
     <meta charset="utf-8" name="description" content="Punit Harish Lohani is a student at New Jersey Institute of Technology. This page describes his technical and professional abilities and gives a peek into his profile.">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
 <body>
+    <nav id="topnav" class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">
+                    Punit Harish Lohani
+                </a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav navbar-left">
+                    <!-- <li>
+                        <h3>Punit Harish Lohani</h3>
+                    </li>
+ -->
+                    <li><a href="assets/Punit Harish Lohani - Resume.pdf">Download Resume</a></li>
+                    <li><a target="_blank" href="https://www.linkedin.com/in/punit-lohani-0a382789"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a target="_blank" href="https://github.com/punitlohani93"><i class="fa fa-github"></i></a></li>
+                    <li><a target="_blank" href="https://www.facebook.com/punit.lohani.75"><i class="fa fa-facebook"></i></a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#about-me-section">About Me</a></li>
+                    <li><a href="#skills-section">Skills</a></li>
+                    <li><a href="#experience-section">Experience</a></li>
+                    <li><a href="#footer-id">Contact</a></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+    </nav>
     <div class="container">
         <header>
-            <div class="page-header">
-            <h1>Punit Harish Lohani</h1>
-            </div>
+            <!-- <div class="page-header">
+                <h1>Punit Harish Lohani</h1>
+            </div> -->
         </header>
         <main>
-            <section class="row">
+            <section id="about-me-section" class="row">
                 <img class="col-md-6 col-sm-6 col-xs-12" height="360" alt="A picture of Lelouch, the protagonist in the anime Code Geass" src="assets/lelouch.jpg">
                 <div class="col-md-6 col-sm-6 col-xs-12 jumbotron">
-                <h2>About Me</h2>
-                <p>
-                    I am an international graduate student at New Jersey Institute of Technology pursuing a Masters degree in Computer Science. I am an aspiring full stack developer. I love animals, coding, sports, anime and boating. Just a simple Indian student aiming to carve out a successful career in the field of software and web development. Anime and JavaScript junkie with no Instagram and Twitter.
-                </p>
+                    <h2>About Me</h2>
+                    <p>
+                        I am an international graduate student at New Jersey Institute of Technology pursuing a Masters degree in Computer Science. I am an aspiring full stack developer. I love animals, coding, sports, anime and boating. Just an ordinary Indian student aiming to carve out a successful career in the field of software and web development. Anime and JavaScript junkie with no Instagram and Twitter.
+                    </p>
                 </div>
             </section>
-            <section>
+            <section id="skills-section">
                 <h2>Skills</h2>
                 <ul>
                     <li>JavaScript</li>
@@ -60,7 +98,7 @@
                     </li>
                 </ul>
             </section>
-            <section>
+            <section id="experience-section">
                 <h2>Employment History</h2>
                 <ul>
                     <li>
@@ -97,7 +135,7 @@
                 </ul>
             </section>
         </main>
-        <footer>
+        <footer id="footer-id">
             <h2>Contact</h2>
             <ul>
                 <li>Email - <a href="mailto:pl243@njit.edu" target="_blank">pl243@njit.edu</a> and <a href="mailto:punit_lohani@yahoo.com" target="_blank">punit_lohani@yahoo.com</a></li>
